# django-tws

./: README.md  README.md.jinja  admin.py.jinja  apps.py.jinja  copier.yml  devserver.py.jinja  devserver_data.py.jinja  models.py  pyproject.toml  pyproject.toml.jinja
showcase/: devserver.py  pyproject.toml
showcase/showcase/dj/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
showcase/showcase/dj/app/: admin.py  apps.py  devserver_data.py  models.py
src/django_tws/: __init__.py  devserver.py  settings.py  users.py
src/django_tws/tws_app/: apps.py
src/django_tws/tws_app/management/commands/: loaddevserverdata.py  removedevservermigrations.py
{{project}}/dj/: asgi.py.jinja  manage.py.jinja  settings.py.jinja  wsgi.py.jinja
